<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             android:layout_width="match_parent"
                                             android:layout_height="wrap_content">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/layout_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/txt_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/service_name"
            android:inputType="textCapSentences|textPersonName"
            android:maxLines="2"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/layout_duration"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintLeft_toLeftOf="@+id/layout_name"
        app:layout_constraintRight_toRightOf="@+id/layout_name"
        app:layout_constraintTop_toBottomOf="@+id/layout_name">

        <EditText
            android:id="@+id/txt_duration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/service_duration"
            android:maxLines="1"
            android:inputType="number"/>

    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:id="@+id/layout_price"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="@+id/layout_duration"
        app:layout_constraintRight_toLeftOf="@+id/chk_sale"
        app:layout_constraintTop_toBottomOf="@+id/layout_duration"
        android:layout_marginRight="8dp">

        <EditText
            android:id="@+id/txt_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/service_price"
            android:imeOptions="actionNext"
            android:inputType="text"
            android:maxLines="1"/>

    </android.support.design.widget.TextInputLayout>

    <CheckBox
        android:id="@+id/chk_sale"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginRight="0dp"
        android:text="@string/service_sale"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintRight_toRightOf="@+id/layout_duration"
        app:layout_constraintTop_toTopOf="@+id/layout_price"
        android:layout_marginTop="16dp"/>
</android.support.constraint.ConstraintLayout>
